# TWC-Assignment

./: .env.example  .gitignore  README.md  pyproject.toml
src/: main.py
src/config/: database.py  settings.py
src/middleware/: auth_middleware.py
src/models/: admin.py  organization.py
src/routes/: admin_routes.py  organization_routes.py
src/services/: admin_service.py  auth_service.py  database_service.py  organization_service.py
src/utils/: validators.py
